--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,7 @@
+#content {
+    height: 330vh;
+}
+
 #hero-div {
     height: 150vh;
     background: url(../assets/images/home-bg.jpg) no-repeat;
@@ -33,7 +37,8 @@
     top: 185vh;
     padding-top: 25vh;
     width: 100%;
-    max-width: 100%;
+    height: 150vh;
+    overflow: hidden;
 }
 
 #pictures-heading {
